<resources>
    <string name="app_name">غِرَاس الجَنّة</string>

    <!-- Splash Screen-->

    <string name="label1"> حصن المسلم من أذكار الكتاب والسنة </string>
    <string name="label2"> لسعيد بن علي بن وهف القحطاني </string>

    <!-- Navigation bottom  -->
    <string name="azkar">الأذكار</string>
    <string name="fav">المفضلة</string>
    <string name="masbaha">المسبحة</string>
    <string name="settings">الإعدادات</string>

    <!-- Dialog box -->
    <string name="choose_zikr"> إِخْتَرْ ذِكْـرًا</string>

    <!-- Settings List  -->
    <string name="general_setting">إِعــْدَادَات عَامَّــــة</string>
    <string name="masbaha_setting">إٍعـْدَادَات المـَسـْبـَحـَة</string>
    <string name="notification">التّــنْـبِـيـهَـــــات</string>
    <string name="share">نَـشْـر التّطـبيـق</string>
    <string name="rate">تـَقـْيٍيـم التـّطبيـق</string>
    <string name="about">حـــَوْل التّـطبيـق</string>

    <!-- Fav Layout-->
    <string name="Edit">تعديل</string>
    <string name="agree">موافق</string>
    <!-- Notification Settings   -->

    <string name="title">تنبيهات الأذكار</string>
    <string name="activate">تفــعــيل التنبيهـــات</string>
    <string name="morning_zikr">أذكــار الصَّـــبــاح</string>
    <string name="evening_zikr">أذكــار الــمـَسـاء</string>
    <string name="wakeup_zikr">أذكــار الاِسْـتِيــقاظ </string>
    <string name="sleeping_zikr">أذكــار الـنَّــوْم</string>
    <string name="reminder">تذكير بالأذكـار</string>
    <string name="hour">السّـاعة:</string>
    <string name="send_reminder">إرسال تنبيه :</string>
    <string name="choose_notification_time">اِختر وقت التنبيه</string>
    <string name="notification_title">لاتنس ذكر اللّه</string>
    <string name="morning_notification">حان وقت أذكار الصباح</string>
    <string name="evening_notification">حان وقت أذكار المساء</string>
    <string name="sleep_notification">حان وقت أذكار النوم</string>
    <string name="wakeup_notification">حان وقت أذكار الاستيقاظ من النوم</string>

    <!-- about Settings   -->

    <string name="info">جزى اللّه خيرا، كل من ساهم في \n بناء و نشر هذا التطبيق </string>
    <string name="call_title">اتصل بنا</string>
    <string name="call_message">اختر إحدى الطريقتين</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
