<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"

        android:title="@string/settings"
        app:showAsAction="always|withText" />


    <item
        android:id="@+id/masbaha"
        android:icon="@drawable/muslim_tasbih"
        android:title="@string/masbaha"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/reading_quran"
        android:title="@string/fav"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/azkar"
        android:icon="@drawable/islamic_art"
        android:title="@string/azkar"
        app:showAsAction="always|withText" />

</menu>