<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_back"
    android:orientation="vertical"
    tools:context=".SettingsFragments">

    <include layout="@layout/custom_toolbar"


        />

    <LinearLayout
        android:id="@+id/general_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/down_arrow" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"

            android:gravity="center_vertical"
            android:fontFamily="@font/tajawal_regular"
            android:text="@string/general_setting"
            android:textColor="@color/colorAccent"
            android:textDirection="rtl"
            android:textSize="20sp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/secondText" />

    <LinearLayout
        android:id="@+id/masbaha_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/down_arrow" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/tajawal_regular"
            android:text="@string/masbaha_setting"
            android:textColor="@color/colorAccent"
            android:textDirection="rtl"
            android:textSize="20sp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/secondText" />

    <LinearLayout

        android:id="@+id/notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/left_arrow" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/tajawal_regular"
            android:text="@string/notification"
            android:textColor="@color/colorAccent"
            android:textDirection="rtl"
            android:textSize="20sp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/secondText" />

    <LinearLayout
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/left_arrow" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/tajawal_regular"
            android:text="@string/share"
            android:textColor="@color/colorAccent"
            android:textDirection="rtl"
            android:textSize="20sp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/secondText" />

    <LinearLayout
        android:id="@+id/rate"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/left_arrow" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/tajawal_regular"
            android:text="@string/rate"
            android:textColor="@color/colorAccent"
            android:textDirection="rtl"
            android:textSize="20sp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/secondText" />

    <LinearLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/left_arrow" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/tajawal_regular"
            android:text="@string/about"
            android:textColor="@color/colorAccent"
            android:textDirection="rtl"
            android:textSize="20sp" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/secondText" />
</LinearLayout>