<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_back"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"

        >


        <ImageButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_cancel_black_24dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/tajawal_regular"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/title"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="200dp"

        android:layout_height="0.5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="15dp"

        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorAccent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:background="#8AFFFFFF">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:fontFamily="@font/tajawal_regular"
            android:text="@string/activate"
            android:textColor="@color/textColor"
            android:textSize="18sp" />

        <com.suke.widget.SwitchButton
            android:id="@+id/activate"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_alignParentLeft="true"
            android:textColor="@color/textColor"
            app:sb_checkline_color="@color/colorAccent"
            app:sb_checked="false"
            app:sb_checked_color="@color/colorPrimaryDark"
            app:sb_uncheck_color="@color/colorPrimaryDark"

            />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_notification"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8AFFFFFF"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/tajawal_regular"
                    android:text="@string/morning_zikr"
                    android:textColor="@color/textColor"
                    android:textSize="18sp" />

                <com.suke.widget.SwitchButton
                    android:id="@+id/morning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/textColor"
                    app:sb_checkline_color="@color/colorAccent"
                    app:sb_checked="false"
                    app:sb_checked_color="@color/colorPrimaryDark"
                    app:sb_uncheck_color="@color/colorPrimaryDark"

                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/morning_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toStartOf="@+id/hour1"
                    android:layout_toLeftOf="@+id/hour1"
                    android:fontFamily="@font/tajawal_regular"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textDirection="rtl" />

                <TextView
                    android:id="@+id/hour1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:clickable="true"

                    android:fontFamily="@font/tajawal_regular"
                    android:foreground="?android:attr/selectableItemBackground"

                    android:text="@string/hour"
                    android:textColor="@color/textColor" />

            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.5dp"
            android:background="#8AFFFFFF"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/tajawal_regular"
                    android:text="@string/evening_zikr"
                    android:textColor="@color/textColor"
                    android:textSize="18sp" />

                <com.suke.widget.SwitchButton
                    android:id="@+id/evening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/textColor"
                    app:sb_checkline_color="@color/colorAccent"
                    app:sb_checked="false"
                    app:sb_checked_color="@color/colorPrimaryDark"
                    app:sb_uncheck_color="@color/colorPrimaryDark"

                    />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/evening_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toStartOf="@+id/hour2"
                    android:layout_toLeftOf="@+id/hour2"
                    android:fontFamily="@font/tajawal_regular"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textDirection="rtl" />

                <TextView
                    android:id="@+id/hour2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:clickable="true"

                    android:fontFamily="@font/tajawal_regular"
                    android:foreground="?android:attr/selectableItemBackground"

                    android:text="@string/hour"
                    android:textColor="@color/textColor" />

            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.5dp"
            android:background="#8AFFFFFF"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/tajawal_regular"
                    android:text="@string/wakeup_zikr"
                    android:textColor="@color/textColor"
                    android:textSize="18sp" />

                <com.suke.widget.SwitchButton
                    android:id="@+id/wakeup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/textColor"
                    app:sb_checkline_color="@color/colorAccent"
                    app:sb_checked="false"
                    app:sb_checked_color="@color/colorPrimaryDark"
                    app:sb_uncheck_color="@color/colorPrimaryDark"

                    />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/wakeup_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toStartOf="@+id/hour3"
                    android:layout_toLeftOf="@+id/hour3"
                    android:fontFamily="@font/tajawal_regular"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textDirection="rtl" />

                <TextView
                    android:id="@+id/hour3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:clickable="true"

                    android:fontFamily="@font/tajawal_regular"
                    android:foreground="?android:attr/selectableItemBackground"

                    android:text="@string/hour"
                    android:textColor="@color/textColor" />

            </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.5dp"
            android:layout_marginBottom="10dp"
            android:background="#8AFFFFFF"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/tajawal_regular"
                    android:text="@string/sleeping_zikr"
                    android:textColor="@color/textColor"
                    android:textSize="18sp" />

                <com.suke.widget.SwitchButton
                    android:id="@+id/sleep"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/textColor"
                    app:sb_checkline_color="@color/colorAccent"
                    app:sb_checked="false"
                    app:sb_checked_color="@color/colorPrimaryDark"
                    app:sb_uncheck_color="@color/colorPrimaryDark"

                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/sleep_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toStartOf="@+id/hour4"
                    android:layout_toLeftOf="@+id/hour4"
                    android:fontFamily="@font/tajawal_regular"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textDirection="rtl" />

                <TextView
                    android:id="@+id/hour4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:clickable="true"

                    android:fontFamily="@font/tajawal_regular"
                    android:foreground="?android:attr/selectableItemBackground"

                    android:text="@string/hour"
                    android:textColor="@color/textColor"
                    android:textDirection="rtl" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#8AFFFFFF"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="@font/tajawal_regular"
                    android:text="@string/reminder"
                    android:textColor="@color/textColor"
                    android:textSize="18sp" />

                <com.suke.widget.SwitchButton
                    android:id="@+id/reminder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_alignParentLeft="true"
                    android:textColor="@color/textColor"
                    app:sb_checkline_color="@color/colorAccent"
                    app:sb_checked="false"
                    app:sb_checked_color="@color/colorPrimaryDark"
                    app:sb_uncheck_color="@color/colorPrimaryDark" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/reminder_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/reminder_select"
                    android:layout_toLeftOf="@+id/reminder_select"
                    android:fontFamily="@font/tajawal_regular"
                    android:text=""
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textDirection="rtl" />

                <TextView
                    android:id="@+id/reminder_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/tajawal_regular"

                    android:text="@string/send_reminder"
                    android:textColor="@color/textColor" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>